Updated code with review comments.

--- a/src/patternfly/components/Card/card-subtitle.hbs
+++ b/src/patternfly/components/Card/card-subtitle.hbs
@@ -2,5 +2,9 @@
   {{#if card-subtitle--attribute}}
     {{{card-subtitle--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
+  {{#if card-subtitle-text}}
+    {{{card-subtitle-text}}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </div>
