--- a/src/patternfly/components/Card/card-title.hbs
+++ b/src/patternfly/components/Card/card-title.hbs
@@ -8,6 +8,9 @@
   {{#if card-title-text--value}}
     {{> card-title-text}}
   {{/if}}
+  {{#if card-subtitle-text}}
+    {{> card-subtitle}}
+  {{/if}}
   {{#if @partial-block}}
     {{> @partial-block}}
   {{/if}}
