--- a/src/patternfly/base/normalize.scss
+++ b/src/patternfly/base/normalize.scss
@@ -108,11 +108,18 @@
   :where(a) {
     color: var(--pf-t--global--text--color--link--default);
     text-decoration-line: var(--pf-t--global--text-decoration--link--line--default);
+    text-decoration-style: var(--pf-t--global--text-decoration--link--style--default);
+    text-decoration-color: var(--pf-t--global--text-decoration--color--default);
+    text-underline-offset: max(var(--pf-t--global--text-decoration--offset--default), 0.28em);
+    transition: ease text-underline-offset 0.3s;
   }
 
   :where(a:hover, a:focus) {
     color: var(--pf-t--global--text--color--link--hover);
     text-decoration-line: var(--pf-t--global--text-decoration--link--line--hover);
+    text-decoration-style: var(--pf-t--global--text-decoration--link--style--hover);
+    text-decoration-color: var(--pf-t--global--text-decoration--color--hover);
+    text-underline-offset: max(var(--pf-t--global--text-decoration--offset--hover), 0.33em);
   }
 
   :where(
