--- a/src/patternfly/components/Drawer/drawer-example-panel.hbs
+++ b/src/patternfly/components/Drawer/drawer-example-panel.hbs
@@ -1,4 +1,4 @@
-{{#> drawer-panel}}
+{{#> drawer-panel drawer-panel--IsGlass=drawer-panel-example--IsGlass}}
   {{#> drawer-head}}
     <span>Drawer panel header content</span>
     {{#> drawer-actions}}
