--- a/src/patternfly/components/Drawer/drawer-panel.hbs
+++ b/src/patternfly/components/Drawer/drawer-panel.hbs
@@ -1,4 +1,9 @@
-<{{#if drawer-panel--type}}{{{drawer-panel--type}}}{{else}}div{{/if}} class="{{pfv}}drawer__panel{{#if drawer-panel--IsResizable}} pf-m-resizable{{/if}}{{#if drawer-panel--modifier}} {{drawer-panel--modifier}}{{/if}}"
+<{{#if drawer-panel--type}}{{{drawer-panel--type}}}{{else}}div{{/if}} class="{{pfv}}drawer__panel
+  {{setModifiers
+    drawer-panel--IsResizable='pf-m-resizable'
+    drawer-panel--IsGlass='pf-m-glass'
+    drawer-panel--modifier=drawer-panel--modifier
+  }}"
   {{#unless drawer-IsStatic}}
     {{#unless drawer-panel--IsOpen}}
       hidden
