--- a/src/patternfly/components/Drawer/drawer.scss
+++ b/src/patternfly/components/Drawer/drawer.scss
@@ -67,6 +67,9 @@ $pf-v6-c-drawer__panel--list--width: (25, 33, 50, 66, 75, 100);
   --#{$drawer}--m-pill__panel--BorderColor: var(--pf-t--global--border--color--default);
   --#{$drawer}--m-pill__panel--BorderRadius: var(--pf-t--global--border--radius--large);
   --#{$drawer}--m-pill--m-expanded__panel--inset: var(--pf-t--global--spacer--inset--page-chrome);
+  --#{$drawer}__panel--m-glass--BackgroundColor: var(--pf-t--global--background--color--glass--default);
+  --#{$drawer}__panel--m-glass--BackdropFilter: var(--pf-t--global--background--color--glass--filter);
+  --#{$drawer}__panel--m-glass--BorderColor: var(--pf-t--global--border--color--alt);
 
   @media screen and (prefers-reduced-motion: no-preference) {
     --#{$drawer}__panel--TransitionDuration--slide: var(--pf-t--global--motion--duration--slide-in--short);
@@ -388,6 +391,13 @@ $pf-v6-c-drawer__panel--list--width: (25, 33, 50, 66, 75, 100);
 
   &.pf-m-no-background {
     --#{$drawer}__panel--BackgroundColor: transparent;
+  }
+
+  &.pf-m-glass {
+    --#{$drawer}__panel--BackgroundColor: var(--#{$drawer}__panel--m-glass--BackgroundColor);
+    --#{$drawer}__panel--BorderColor: var(--#{$drawer}__panel--m-glass--BorderColor);
+
+    backdrop-filter: var(--#{$drawer}__panel--m-glass--BackdropFilter);
   }
 
   @media screen and (min-width: $pf-v6-global--breakpoint--md) {
