--- a/src/patternfly/base/tokens/tokens-local.scss
+++ b/src/patternfly/base/tokens/tokens-local.scss
@@ -1,3 +1,5 @@
+@import '../../sass-utilities/init';
+
 // LOCAL TOKENS
 
 @mixin pf-v6-tokens {
@@ -135,25 +137,57 @@
   --pf-t--temp--dev--tbd: #BC11E0;
   // stylelint-enable
 
-  // Compass/glass tokens
-  --pf-t--global--background--color--glass--filter: blur(12.5px);
-  --pf-t--global--background--color--glass--opacity: .85;
-  --pf-t--global--background--color--glass--default: rgba(255, 255, 255, var(--pf-t--global--background--color--glass--opacity));
-  --pf-t--global--dark--background--color--glass--filter: blur(12.5px);
-  --pf-t--global--dark--background--color--glass--opacity: .85;
-  --pf-t--global--dark--background--color--glass--default: rgba(29, 29, 29, var(--pf-t--global--background--color--glass--opacity));
+  // Glass theme  tokens
+  // Glass theme off base. These are reused.
+  --pf-t--global--background--color--glass--filter--base: none;
+  --pf-t--global--background--color--glass--opacity--base: 1;
+  --pf-t--global--background--color--glass--default--base: var(--pf-t--global--background--color--primary--default);
 
-  // Compass/glass dark tokens
-  &:where(.pf-v6-theme-dark) {
+  // Glass theme off defaults
+  --pf-t--global--background--color--glass--filter: var(--pf-t--global--background--color--glass--filter--base);
+  --pf-t--global--background--color--glass--opacity: var(--pf-t--global--background--color--glass--opacity--base);
+  --pf-t--global--background--color--glass--default: var(--pf-t--global--background--color--glass--default--base);
+  --pf-t--global--dark--background--color--glass--filter: var(--pf-t--global--background--color--glass--filter--base);
+  --pf-t--global--dark--background--color--glass--opacity: var(--pf-t--global--background--color--glass--opacity--base);
+  --pf-t--global--dark--background--color--glass--default: var(--pf-t--global--background--color--glass--default--base);
+
+  // Glass theme on. In the root scope so they can be themed on :root
+  --pf-t--global--light--glass--background--color--glass--color: #ffffff;
+  --pf-t--global--light--glass--background--color--glass--filter: blur(12.5px);
+  --pf-t--global--light--glass--background--color--glass--opacity: 85%;
+  --pf-t--global--light--glass--background--color--glass--default: color-mix(in srgb, var(--pf-t--global--light--glass--background--color--glass--color) var(--pf-t--global--light--glass--background--color--glass--opacity), transparent );
+  --pf-t--global--dark--glass--background--color--glass--color: #1d1d1d;
+  --pf-t--global--dark--glass--background--color--glass--filter: blur(12.5px);
+  --pf-t--global--dark--glass--background--color--glass--opacity: 85%;
+  --pf-t--global--dark--glass--background--color--glass--default: color-mix(in srgb, var(--pf-t--global--dark--glass--background--color--glass--color) var(--pf-t--global--dark--glass--background--color--glass--opacity), transparent );
+
+  // Dark theme
+  &:where(.#{$pf-prefix}theme-dark) {
     --pf-t--global--background--color--glass--filter: var(--pf-t--global--dark--background--color--glass--filter);
     --pf-t--global--background--color--glass--opacity: var(--pf-t--global--dark--background--color--glass--opacity);
     --pf-t--global--background--color--glass--default: var(--pf-t--global--dark--background--color--glass--default);
   }
 
-  // no glass theme
-  &:root:where(.pf-m-no-glass) {
-    --pf-t--global--background--color--glass--filter: none;
-    --pf-t--global--background--color--glass--opacity: 1;
-    --pf-t--global--background--color--glass--default: var(--pf-t--global--background--color--primary--default);
+  // Glass theme
+  &:where(.#{$pf-prefix}theme-glass) {
+    --pf-t--global--background--color--glass--filter: var(--pf-t--global--light--glass--background--color--glass--filter);
+    --pf-t--global--background--color--glass--opacity: var(--pf-t--global--light--glass--background--color--glass--opacity);
+    --pf-t--global--background--color--glass--default: var(--pf-t--global--light--glass--background--color--glass--default);
+  }
+
+  // Glass dark theme
+  &:where(.#{$pf-prefix}theme-glass.#{$pf-prefix}theme-dark) {
+    --pf-t--global--background--color--glass--filter: var(--pf-t--global--dark--glass--background--color--glass--filter);
+    --pf-t--global--background--color--glass--opacity: var(--pf-t--global--dark--glass--background--color--glass--opacity);
+    --pf-t--global--background--color--glass--default: var(--pf-t--global--dark--glass--background--color--glass--default);
+  }
+
+  // High contrast
+  &:where(.#{$pf-prefix}theme-high-contrast) {
+    --pf-t--global--background--color--glass--filter: var(--pf-t--global--background--color--glass--filter--base);
+    --pf-t--global--background--color--glass--opacity: var(--pf-t--global--background--color--glass--opacity--base);
+    --pf-t--global--background--color--glass--default: var(--pf-t--global--background--color--glass--default--base);
   }
 }
+
+
