--- a/src/patternfly/components/Tabs/tabs.hbs
+++ b/src/patternfly/components/Tabs/tabs.hbs
@@ -12,11 +12,13 @@
   {{#if tabs--attribute}}
     {{{tabs--attribute}}}
   {{/if}}
-  {{#unless tabs--IsNav}}
-    {{#if tabs--id}}
-      role="region"
-      id="{{{tabs--id}}}"
-    {{/if}}
-  {{/unless}}>
+  {{#unlessIfEquals tabs--type "nav"}}
+    {{#unless tabs--IsNav}}
+      {{#if tabs--id}}
+        role="region"
+        id="{{{tabs--id}}}"
+      {{/if}}
+    {{/unless}}
+  {{/unlessIfEquals}}>
   {{> @partial-block}}
 </{{#if tabs--type}}{{tabs--type}}{{else if tabs--IsNav}}nav{{else}}div{{/if}}>
