--- a/src/patternfly/demos/PrimaryDetail/primary-detail-template-panel-tabs.hbs
+++ b/src/patternfly/demos/PrimaryDetail/primary-detail-template-panel-tabs.hbs
@@ -1,4 +1,4 @@
-{{#> tabs tabs--id=(concat primary-detail-template--id '-tabs') tabs--modifier=primary-detail-template-panel-tabs--modifier}}
+{{#> tabs tabs--aria-label=primary-detail-template-panel-tabs--aria-label tabs--id=(concat primary-detail-template--id '-tabs') tabs--modifier=primary-detail-template-panel-tabs--modifier}}
   {{#> tabs-scroll-button tabs-scroll-button--IsLeft="true"}}{{/tabs-scroll-button}}
   {{#> tabs-list}}
     {{> __tabs-item
