feat(Hero): added Hero component from compasshero

--- a/src/patternfly/sass-utilities/namespaces-components.scss
+++ b/src/patternfly/sass-utilities/namespaces-components.scss
@@ -110,6 +110,9 @@ $form-control: #{$pf-prefix} + 'c-form-control';
 // Helper Text
 $helper-text: #{$pf-prefix} + 'c-helper-text';
 
+// Hero
+$hero: #{$pf-prefix} + 'c-hero';
+
 // Hint
 $hint: #{$pf-prefix} + 'c-hint';
 
