Added styles to index

--- a/src/patternfly/components/Compass/compass-panel.hbs
+++ b/src/patternfly/components/Compass/compass-panel.hbs
@@ -4,7 +4,7 @@
     compass-panel--IsPill='pf-m-pill'
     compass-panel--IsFullHeight='pf-m-full-height'
     compass-panel--HasNoBorder='pf-m-no-border'
-    compass-panel--IsHero='pf-v6-c-compass__hero'
+    compass-panel--IsHero='pf-m-hero'
     compass-panel--IsScrollable='pf-m-scrollable'
     compass-panel--modifier=compass-panel--modifier
   }}"
