--- a/src/patternfly/components/_index.scss
+++ b/src/patternfly/components/_index.scss
@@ -32,8 +32,9 @@
 @use "./FileUpload/file-upload";
 @use "./Form/form";
 @use "./FormControl/form-control";
-@use "./Hint/hint";
 @use "./HelperText/helper-text";
+@use "./Hero/hero";
+@use "./Hint/hint";
 @use "./Icon/icon";
 @use "./InlineEdit/inline-edit";
 @use "./InputGroup/input-group";
