chore(Compass): replaced flex layout in CompassMainHeader

--- a/src/patternfly/components/Compass/compass-main-header.hbs
+++ b/src/patternfly/components/Compass/compass-main-header.hbs
@@ -1,4 +1,4 @@
-<div class="{{pfv}}compass__main-header{{#if compass-main-header--modifier}} {{compass-main-header--modifier}}{{/if}}"
+<div class="{{pfv}}compass__panel {{pfv}}compass__main-header{{#if compass-main-header--modifier}} {{compass-main-header--modifier}}{{/if}}"
   {{#if compass-main-header--attribute}}
     {{{compass-main-header--attribute}}}
   {{/if}}>
