--- a/src/patternfly/components/Compass/compass.scss
+++ b/src/patternfly/components/Compass/compass.scss
@@ -10,6 +10,8 @@
   --#{$compass}__nav--RowGap: var(--pf-t--global--spacer--gap--group--vertical);
   --#{$compass}__sidebar--Padding: var(--pf-t--global--spacer--sm);
   --#{$compass}__main--RowGap: var(--pf-t--global--spacer--md);
+  --#{$compass}__main-header--RowGap: var(--pf-t--global--spacer--sm);
+  --#{$compass}__main-header--ColumnGap: var(--pf-t--global--spacer--md);
   --#{$compass}__panel--BackgroundColor: var(--pf-t--global--background--color--glass--default);
   --#{$compass}__panel--BackdropFilter: var(--pf-t--global--background--color--glass--filter);
   --#{$compass}__panel--BorderRadius: var(--pf-t--global--border--radius--large);
@@ -156,6 +158,22 @@
 
   &.pf-m-scrollable {
     overflow: auto;
+  }
+
+  &.#{$compass}__main-header {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: var(--#{$compass}__main-header--RowGap) var(--#{$compass}__main-header--ColumnGap);
+
+    .#{$compass}__main-header-title {
+      flex-grow: 1;
+      max-width: 100%;
+    }
+
+    .#{$compass}__main-header-toolbar {
+      max-width: 100%;
+    }
   }
 }
 
