--- a/src/patternfly/demos/Compass/compass--card-view.hbs
+++ b/src/patternfly/demos/Compass/compass--card-view.hbs
@@ -63,31 +63,27 @@
     {{/compass-sidebar}}
     {{#> compass-main}}
       {{#> compass-main-header}}
-        {{#> compass-panel}}
-          {{#> l-flex l-flex--modifier="pf-m-align-items-center"}}
-            {{#> l-flex-item l-flex-item--modifier="pf-m-grow"}}
-              {{#> title titleType="h2" title--modifier="pf-m-h1"}}
-                Page title
-              {{/title}}
-            {{/l-flex-item}}
-            {{#> l-flex-item}}
-              {{#> action-list}}
-                {{#> action-list-group}}
-                  {{#> action-list-item}}
-                    {{#> button button--IsPrimary=true}}
-                      Add integration
-                    {{/button}}
-                  {{/action-list-item}}
-                  {{#> action-list-item}}
-                    {{#> button button--IsSecondary=true}}
-                      Test integration
-                    {{/button}}
-                  {{/action-list-item}}
-                {{/action-list-group}}
-              {{/action-list}}
-            {{/l-flex-item}}
-          {{/l-flex}}
-        {{/compass-panel}}
+        {{#> compass-main-header-title}}
+          {{#> title titleType="h2" title--modifier="pf-m-h1"}}
+            Page title
+          {{/title}}
+        {{/compass-main-header-title}}
+        {{#> compass-main-header-toolbar}}
+          {{#> action-list}}
+            {{#> action-list-group}}
+              {{#> action-list-item}}
+                {{#> button button--IsPrimary=true}}
+                  Add integration
+                {{/button}}
+              {{/action-list-item}}
+              {{#> action-list-item}}
+                {{#> button button--IsSecondary=true}}
+                  Test integration
+                {{/button}}
+              {{/action-list-item}}
+            {{/action-list-group}}
+          {{/action-list}}
+        {{/compass-main-header-toolbar}}
       {{/compass-main-header}}
       {{#> compass-content}}
         {{#> compass-panel compass-panel--IsScrollable=true}}
