Separated main-header from panel

--- a/src/patternfly/demos/Compass/compass--card-view.hbs
+++ b/src/patternfly/demos/Compass/compass--card-view.hbs
@@ -63,27 +63,29 @@
     {{/compass-sidebar}}
     {{#> compass-main}}
       {{#> compass-main-header}}
-        {{#> compass-main-header-title}}
-          {{#> title titleType="h2" title--modifier="pf-m-h1"}}
-            Page title
-          {{/title}}
-        {{/compass-main-header-title}}
-        {{#> compass-main-header-toolbar}}
-          {{#> action-list}}
-            {{#> action-list-group}}
-              {{#> action-list-item}}
-                {{#> button button--IsPrimary=true}}
-                  Add integration
-                {{/button}}
-              {{/action-list-item}}
-              {{#> action-list-item}}
-                {{#> button button--IsSecondary=true}}
-                  Test integration
-                {{/button}}
-              {{/action-list-item}}
-            {{/action-list-group}}
-          {{/action-list}}
-        {{/compass-main-header-toolbar}}
+        {{#> compass-panel}}
+          {{#> compass-main-header-title}}
+            {{#> title titleType="h2" title--modifier="pf-m-h1"}}
+              Page title
+            {{/title}}
+          {{/compass-main-header-title}}
+          {{#> compass-main-header-toolbar}}
+            {{#> action-list}}
+              {{#> action-list-group}}
+                {{#> action-list-item}}
+                  {{#> button button--IsPrimary=true}}
+                    Add integration
+                  {{/button}}
+                {{/action-list-item}}
+                {{#> action-list-item}}
+                  {{#> button button--IsSecondary=true}}
+                    Test integration
+                  {{/button}}
+                {{/action-list-item}}
+              {{/action-list-group}}
+            {{/action-list}}
+          {{/compass-main-header-toolbar}}
+        {{/compass-panel}}
       {{/compass-main-header}}
       {{#> compass-content}}
         {{#> compass-panel compass-panel--IsScrollable=true}}
