--- a/src/patternfly/components/Compass/compass.scss
+++ b/src/patternfly/components/Compass/compass.scss
@@ -94,6 +94,24 @@
   min-height: 0;
 }
 
+.#{$compass}__main-header {
+  & .#{$compass}__panel {
+    display: flex;
+    flex-wrap: wrap;
+    gap: var(--#{$compass}__main-header--RowGap) var(--#{$compass}__main-header--ColumnGap);
+    align-items: center;
+
+    .#{$compass}__main-header-title {
+      flex-grow: 1;
+      max-width: 100%;
+    }
+
+    .#{$compass}__main-header-toolbar {
+      max-width: 100%;
+    }
+  }
+}
+
 .#{$compass}__content {
   display: flex;
   flex: 1 0 0;
@@ -158,22 +176,6 @@
 
   &.pf-m-scrollable {
     overflow: auto;
-  }
-
-  &.#{$compass}__main-header {
-    display: flex;
-    flex-wrap: wrap;
-    gap: var(--#{$compass}__main-header--RowGap) var(--#{$compass}__main-header--ColumnGap);
-    align-items: center;
-
-    .#{$compass}__main-header-title {
-      flex-grow: 1;
-      max-width: 100%;
-    }
-
-    .#{$compass}__main-header-toolbar {
-      max-width: 100%;
-    }
   }
 }
 
