fix(compass): add support for expanded

--- a/src/patternfly/components/Compass/compass-header.hbs
+++ b/src/patternfly/components/Compass/compass-header.hbs
@@ -1,4 +1,10 @@
-<div class="{{pfv}}compass__header{{#if compass-header--modifier}} {{compass-header--modifier}}{{/if}}"
+<div class="{{pfv}}compass__header
+  {{#unless compass-header--IsCollapsed}}
+    pf-m-expanded
+  {{/unless}}
+  {{setModifiers
+    compass-header--modifier=compass-header--modifier
+  }}"
   {{#if compass-header--attribute}}
     {{{compass-header--attribute}}}
   {{/if}}>
